[chore]: Update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-code-syntax",
+  "name": "react-syntax-highliter",
   "author": "Nedra Krifa",
   "version": "0.1.0",
   "private": true,
